tests/init/neg/t3273.check
-- Error: tests/init/neg/t3273.scala:4:42 ------------------------------------------------------------------------------
4 |  val num1: LazyList[Int] = 1 #:: num1.map(_ + 1)                        // error
  |                                  ^^^^^^^^^^^^^^^
<<<<<<< HEAD
  |             Cannot prove that the value is fully-initialized. Only initialized values may be used as arguments.
=======
  |             Cannot prove that the value is fully initialized. Only initialized values may be used as arguments.
>>>>>>> 91c03b1f7835d574290eba1ecf236e0f59fc2bf0
  |
  |             The unsafe promotion may cause the following problem:
  |             Access non-initialized value num1. Calling trace:
  |              -> val num1: LazyList[Int] = 1 #:: num1.map(_ + 1)                        // error	[ t3273.scala:4 ]
-- Error: tests/init/neg/t3273.scala:5:61 ------------------------------------------------------------------------------
5 |  val num2: LazyList[Int] = 1 #:: num2.iterator.map(_ + 1).to(LazyList)  // error
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<<<<<<< HEAD
  |             Cannot prove that the value is fully-initialized. Only initialized values may be used as arguments.
=======
  |             Cannot prove that the value is fully initialized. Only initialized values may be used as arguments.
>>>>>>> 91c03b1f7835d574290eba1ecf236e0f59fc2bf0
  |
  |             The unsafe promotion may cause the following problem:
  |             Access non-initialized value num2. Calling trace:
  |              -> val num2: LazyList[Int] = 1 #:: num2.iterator.map(_ + 1).to(LazyList)  // error	[ t3273.scala:5 ]
